--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@clerk/localizations": "^1.24.1",
     "@clerk/nextjs": "^4.21.15",
     "@hookform/resolvers": "^3.1.1",
     "@prisma/client": "^5.0.0",
@@ -21,6 +22,7 @@
     "@radix-ui/react-select": "^1.2.2",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tooltip": "^1.0.6",
     "@types/node": "20.4.1",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
@@ -42,6 +44,7 @@
     "react-hook-form": "^7.45.1",
     "react-hot-toast": "^2.4.1",
     "react-markdown": "^8.0.7",
+    "react-share": "^4.4.1",
     "replicate": "^0.12.3",
     "stripe": "^12.13.0",
     "tailwind-merge": "^1.13.2",
@@ -49,6 +52,7 @@
     "tailwindcss-animate": "^1.0.6",
     "typescript": "5.1.6",
     "typewriter-effect": "^2.20.1",
+    "yookassa": "^0.1.1",
     "zod": "^3.21.4",
     "zustand": "^4.3.9"
   },
